fix svg sizing issues on firefox
* set keyboard shortcuts to be off by default

* set sizes on svgs so they don't take up the entire page lol (atleast on firefox)

* add class for svg icons in case i style them in the future

--- a/src/css/maths.css
+++ b/src/css/maths.css
@@ -138,4 +138,8 @@
 
 .experimental {
   color: black;
+  max-width: 20px;
+  max-height: 20px;
+  min-width: 20px;
+  min-height: 20px;
 }
